<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_3"
    tools:context=".ui.fragments.SignInFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/LottieDetails"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/login" />

    <TextView
        android:id="@+id/greeting1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/welcome_back_text"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/CardViewLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LottieDetails"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/greeting2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:text="@string/login_title_text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/CardViewLogin"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/emptyText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/email_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_background"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/password_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_background"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />

            <CheckBox
                android:id="@+id/checkBoxRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/color_1"
                android:buttonTintMode="src_in"
                android:text="@string/remember"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background"
                android:text="@string/sign_in_text"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="17sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="32dp"
        android:text="@string/create_new_account_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardViewLogin" />

    <TextView
        android:id="@+id/goToSignUpFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sign_up_text"
        android:textColor="@color/color_1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/emptyText"
        app:layout_constraintStart_toEndOf="@+id/emptyText"
        app:layout_constraintTop_toTopOf="@+id/emptyText" />


</androidx.constraintlayout.widget.ConstraintLayout>